<resources>
    <string name="app_name"></string>

    <string name="value_any_category">All Category</string>
<!--    <string name="value_any_city">Anywhere</string>-->
    <string name="value_any_price">Any price</string>
    <string name="price_1"></string>
    <string name="price_2">$$</string>
    <string name="price_3">$$$</string>

    <string name="fmt_num_ratings" translatable="false">(%d)</string>
    <string name="all_words">All Words</string>
    <string name="header_filters">Filter</string>

    <string name="sort_by_rating">Sort by Rating</string>
    <string name="sort_by_popularity">Sort by Popularity</string>
    <string name="sort_by_price">Sort by Price</string>

    <string name="sorted_by_rating">sorted by rating</string>
    <string name="sorted_by_price">sorted by price</string>
    <string name="sorted_by_popularity">sorted by popularity</string>

    <string name="sign_out">Sign Out</string>
    <string name="divider_bullet">•</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="message_no_results">Couldn\'t find any results</string>
    <string name="message_no_reviews">Be the first to leave a review!</string>
    <string name="hint_review">How was your experience?</string>
    <string name="submit">Submit</string>
    <string name="filter_add_review">Add review</string>
    <string name="add_item_one_by_one">Add a new word</string>
    <string name="dialog_add_word">Word</string>
    <string name="hint_word_name">Name</string>
    <string name="hint_meaning_text">Meaning</string>
    <string name="hint_category_text">Category</string>
    <string name="value_any_owner">All user</string>
    <string name="update">Update</string>
    <string name="dialog_delete_word">Delete This Item ?</string>
    <string name="delete">Delete</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_forgot_password">Forgot Your Password</string>
    <string name="btn_link_to_register">Register Now</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<<Back]]></string>
    <string name="email">Email</string>
    <string name="action_sign_in_short">Register</string>
    <string name="btn_link_to_login">Login Now!</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="hint_daily_goal">Set Your Daily Goal</string>
    <string name="hint_daily_goal_desc">Description</string>
    <string name="add_word_list">Add a word List</string>
    <string name="dialog_add_word_list">Word List</string>
    <string name="dialog_delete_word_list">Delete This Word List ?</string>
    <string name="dialog_add_group">Group</string>
    <string name="hint_group_name">Group Name</string>
    <string name="dialog_delete_group">Delete This Group ?</string>
    <string name="add_group">Add a new group</string>
    <string name="user_management">User Management</string>
    <string name="dialog_add_user">User</string>
    <string name="hint_user_name">User Name</string>
    <string name="add_new_user">Add new User</string>
    <string name="limit_20">20</string>
    <string name="limit_50">50</string>
    <string name="limit_100">100</string>
    <string name="limit_200">200</string>
    <string name="add_word_list_detail">Add WordList Detail</string>
    <string name="dialog_add_word_list_detail">Word</string>
    <string name="dialog_delete_user">Delete This User ?</string>
    <string name="notification">Reminder</string>
    <!-- Types of food I could think of in 5 minutes -->
    <string-array name="categories">
        <item>@string/value_any_category</item>
        <item>Verb</item>
        <item>Adjective</item>
        <item>Noun</item>
        <item>Adverb</item>
    </string-array>

    <!-- Price filters -->
    <string-array name="prices">
        <item>@string/value_any_price</item>

        <item>@string/price_1</item>
        <item>@string/price_2</item>
        <item>@string/price_3</item>
    </string-array>

    <!-- Ways you can sort words -->
    <string-array name="sort_by">
        <item>@string/sort_by_rating</item>
        <item>@string/sort_by_popularity</item>
    </string-array>

    <!-- Owner Filters   -->
    <string-array name="owners">
        <item>@string/value_any_owner</item>
        <item>Me</item>
    </string-array>

    <string-array name="limit">
        <item>@string/limit_20</item>
        <item>@string/limit_50</item>
        <item>@string/limit_100</item>
        <item>@string/limit_200</item>
    </string-array>
</resources>
